; ModuleID = '/home/carl/AnghaBench/wcdb/repair/extr_sqliterk_btree.c_sqliterkBtreeGetLengthForSerialType.c'
source_filename = "/home/carl/AnghaBench/wcdb/repair/extr_sqliterk_btree.c_sqliterkBtreeGetLengthForSerialType.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@sqliterkBtreeGetLengthForSerialType.sqliterk_btree_serialtype_fixlengths = internal global [12 x i32] [i32 0, i32 1, i32 2, i32 3, i32 4, i32 6, i32 8, i32 8, i32 0, i32 0, i32 0, i32 0], align 16
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @sqliterkBtreeGetLengthForSerialType to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sqliterkBtreeGetLengthForSerialType(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = icmp slt i32 %4, 0
  br i1 %5, label %6, label %7

6:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %22

7:                                                ; preds = %1
  %8 = load i32, i32* %3, align 4
  %9 = icmp slt i32 %8, 12
  br i1 %9, label %10, label %15

10:                                               ; preds = %7
  %11 = load i32, i32* %3, align 4
  %12 = sext i32 %11 to i64
  %13 = getelementptr inbounds [12 x i32], [12 x i32]* @sqliterkBtreeGetLengthForSerialType.sqliterk_btree_serialtype_fixlengths, i64 0, i64 %12
  %14 = load i32, i32* %13, align 4
  store i32 %14, i32* %2, align 4
  br label %22

15:                                               ; preds = %7
  %16 = load i32, i32* %3, align 4
  %17 = sub nsw i32 %16, 12
  %18 = load i32, i32* %3, align 4
  %19 = srem i32 %18, 2
  %20 = sub nsw i32 %17, %19
  %21 = sdiv i32 %20, 2
  store i32 %21, i32* %2, align 4
  br label %22

22:                                               ; preds = %15, %10, %6
  %23 = load i32, i32* %2, align 4
  ret i32 %23
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
